--- a/application/cms/view/category/edit.html
+++ b/application/cms/view/category/edit.html
@@ -12,7 +12,7 @@
                 </ul>
                 <div class="layui-tab-content">
                     <div class="layui-tab-item layui-show">
-                        <div class="layui-form-item {eq name="data.relation" value="1" }lay-hide{/eq}">
+                        <div class="layui-form-item {eq name="data.relation" value="1" }layui-hide{/eq}">
                             <label>上级菜单</label>
                             <div class="w300">
                                 <select name="parentid" lay-verify="required">
@@ -21,7 +21,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="layui-form-item {eq name="data.relation" value="1" }lay-hide{/eq}">
+                        <div class="layui-form-item {eq name="data.relation" value="1" }layui-hide{/eq}">
                             <label>栏目类型</label>
                             <div class="w300">
                                 <input type="radio" name="type" value="2" title="列表" {eq name="data.type" value="2" }checked{/eq} lay-filter="type">
@@ -39,7 +39,7 @@
                                 </select> 
                             </div> 
                         </div> 
-                        <div class="layui-form-item web_list {eq name="data.relation" value="1" }lay-hide{/eq}" >
+                        <div class="layui-form-item web_list {eq name="data.relation" value="1" }layui-hide{/eq}" >
                             <label>扩展列表</label>
                             <div class="w300">
                                 <select name="relationid">
