--- a/application/cms/view/cms/classlist.html
+++ b/application/cms/view/cms/classlist.html
@@ -38,6 +38,7 @@ layui.use('table', function() {
                 { field: 'listorder', width: 70, title: '排序', edit: 'text' },
                 { field: 'id', width: 70, title: 'ID' },
                 { field: 'title', title: '标题' },
+                { field: 'relation', title: '扩展' },
                 { field: 'hits', width: 80, title: '点击量' },
                 { field: 'updatetime', width: 180, title: '更新时间' },
                 { field: 'status', width: 100, align: "center", title: '状态', templet: '#statusTpl', unresize: true },
