--- a/application/cms/view/cms/public_categorys.html
+++ b/application/cms/view/cms/public_categorys.html
@@ -5,10 +5,17 @@
     <title>Yznmcs</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="__STATIC__/libs/zTree/metroStyle.css">
+    <link rel="stylesheet" type="text/css" href="__STATIC__/index/css/iconfont.css">
 	<style>
 	body {background-color: white; margin:0; padding:0; text-align: center; }
-	div, p, table, th, td {list-style:none; margin:0; padding:0; color:#333; font-size:12px; font-family:dotum, Verdana, Arial, Helvetica, AppleGothic, sans-serif; }
+	div, p, table, th, td {list-style:none; margin:0; display: block; padding:0; color:#333; font-size:12px; font-family:dotum, Verdana, Arial, Helvetica, AppleGothic, sans-serif; }
 	#testIframe {margin-left: 10px;}
+
+    .iconfont{
+        font-size: 14px;
+        display: inline-block;
+        padding-right: 4px;
+    }
 	</style>
     <script src="__STATIC__/libs/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="__STATIC__/libs/zTree/jquery.ztree.core.min.js"></script>
@@ -93,7 +100,7 @@
         <tr>
             <td align=left valign=top>
                 <ul class="ztree" style="margin-left: 5px;margin-top:5px; padding: 0;">
-                    <li><a title="全部展开、折叠 "><span class="button ico_open"></span><span>扩展栏目列表</span></a> </li>
+                    <li><a title="全部展开、折叠 "><span class="icon-discount iconfont"></span><span>扩展栏目列表</span></a> </li>
                 </ul>
                 <ul id="tree2" class="ztree" style="overflow:auto;"></ul>
             </td>
