--- a/application/cms/view/category/edit.html
+++ b/application/cms/view/category/edit.html
@@ -41,16 +41,23 @@
                         </div> 
                         <div class="layui-form-item web_list {eq name="data.relation" value="1" }layui-hide{/eq}" >
                             <label>扩展列表</label>
-                            <div class="w300">
+                            <div class="layui-form-field-label"> 
+                            	<div class="w300 inline-height">
                                 <select name="relationid">
                                     <option value="">请选择扩展列表</option>
                                     {$relation|raw}
                                 </select>
+                                </div>
+                                <div class="inline-height jia-relation">
+                                
+                                 <input type="checkbox" name="multiple" lay-skin="switch" lay-text="ON|OFF" value="1" {eq name="data.multiple" value="1" }checked{/eq}>
+                                </div>
                             </div>
                             <div class="layui-form-mid layui-word-aux">显示开启了‘关联列表’的分类</div>
                         </div>
                         <div class="layui-form-item">
                             <label class="">关联列表</label>
+                            
                             <div class="layui-form-field-label">
                                 <input type="checkbox" name="relation" disabled="disabled" lay-skin="switch" lay-filter="guanlian" lay-text="ON|OFF" value="{data.relation}" {eq name="data.relation" value="1" }checked{/eq}>  <!-- checked='' -->
                             </div>
@@ -105,7 +112,7 @@
                             <div class="layui-form-item">
                                 <label>在导航显示</label>
                                 <div class="w300">
-                                    <input type="radio" name="status" value="1" title="显示" {eq name="data.status" value="1" }checked{/eq}> <input type="radio" name="status" value="0" title="隐藏" {eq name="data.status" value="0" }checked{/eq}> </div> </div> <div class="layui-form-item">
+                                    <input type="radio" name="status" value="1" title="显示" {eq name="data.relation" value="1" }disabled{/eq} {eq name="data.status" value="1" }checked{/eq}> <input type="radio" name="status" value="0" title="隐藏" {eq name="data.status" value="0" }checked{/eq}> </div> </div> <div class="layui-form-item">
                                     <label>显示排序</label>
                                     <div class="w300">
                                         <input type="text" name="listorder" autocomplete="off" placeholder="显示排序" class="layui-input" value="{$data['listorder']}">
