--- a/application/index/view/index/detail.html
+++ b/application/index/view/index/detail.html
@@ -5,8 +5,8 @@
 	<section class="row">
 		<div class="col-sm-9">
 			<div style="background: #888; height:1000px;">
-				{$jia['detail']->articleAata->content}
-				{$jia['detail']->title}
+				{$content|raw}
+				{$result['detail']->title}
 			</div>
 		</div>
 		<div class="col-sm-3">
