--- a/application/index/view/layout/footer.html
+++ b/application/index/view/layout/footer.html
@@ -2,5 +2,16 @@
 </footer>
 </body>
 <script type="text/javascript" src="__STATIC__/index/js/jquery.min.js"></script>
+
+<!-- markdown 转 html -->
+<script src="__STATIC__/libs/editormd/lib/marked.min.js"></script>
+<script src="__STATIC__/libs/editormd/lib/prettify.min.js"></script>
+<script src="__STATIC__/libs/editormd/lib/raphael.min.js"></script>
+<script src="__STATIC__/libs/editormd/lib/underscore.min.js"></script>
+<script src="__STATIC__/libs/editormd/lib/sequence-diagram.min.js"></script>
+<script src="__STATIC__/libs/editormd/lib/flowchart.min.js"></script>
+<script src="__STATIC__/libs/editormd/lib/jquery.flowchart.min.js"></script>
+<script src="__STATIC__/libs/editormd/editormd.min.js"></script>
+<!-- markdown 转 html END -->
 <script type="text/javascript" src="__STATIC__/index/js/utils.js"></script>
 </html>
