--- a/application/index/view/layout/header.html
+++ b/application/index/view/layout/header.html
@@ -5,5 +5,6 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="__STATIC__/index/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="__STATIC__/index/css/utils.css">
+	<link rel="stylesheet" type="text/css" href="__STATIC__/libs/editormd/css/editormd.min.css">
 </head>
 <body>
