--- a/application/index/view/layout/footer.html
+++ b/application/index/view/layout/footer.html
@@ -1,7 +1,16 @@
 <footer id="footer">
+	<div class="type-wrap">
+            <div id="typed-strings">
+                <span>法国规范化规范化 <strong>jQuery</strong> plugin.</span>
+                <p>It <em>types</em> out sentences.</p>
+                <p>And then deletes them.</p>
+                <p>Try it out!</p>
+            </div>
+            <span id="typed" style="white-space:pre;"></span>
+        </div>
 </footer>
 </body>
-<script type="text/javascript" src="__STATIC__/index/js/jquery.min.js"></script>
+
 
 <!-- markdown 转 html -->
 <script src="__STATIC__/libs/editormd/lib/marked.min.js"></script>
@@ -13,5 +22,25 @@
 <script src="__STATIC__/libs/editormd/lib/jquery.flowchart.min.js"></script>
 <script src="__STATIC__/libs/editormd/editormd.min.js"></script>
 <!-- markdown 转 html END -->
+<script type="text/javascript" src="__STATIC__/index/js/typed.min.js"></script>
 <script type="text/javascript" src="__STATIC__/index/js/utils.js"></script>
+
+<script type="text/javascript">
+	$("#typed").typed({
+            // strings: ["Typed.js is a <strong>jQuery</strong> plugin.", "It <em>types</em> out sentences.", "And then deletes them.", "Try it out!"],
+            stringsElement: $('#typed-strings'),
+            typeSpeed: 30,
+            backDelay: 500,
+            loop: false,
+            contentType: 'html', // or text
+            // defaults to false for infinite loop
+            loopCount: false,
+            callback: function(){ },
+            resetCallback: function() { newTyped(); }
+        });
+
+        $(".reset").click(function(){
+            $("#typed").typed('reset');
+        });
+</script>
 </html>
