--- a/application/index/view/layout/header.html
+++ b/application/index/view/layout/header.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="__STATIC__/index/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="__STATIC__/index/css/utils.css">
+	<link rel="stylesheet" type="text/css" href="__STATIC__/index/css/iconfont.css">
 	<link rel="stylesheet" type="text/css" href="__STATIC__/libs/editormd/css/editormd.min.css">
+
+	<script type="text/javascript" src="__STATIC__/index/js/jquery.min.js"></script>
 </head>
 <body>
