--- a/public/static/index/css/utils.css
+++ b/public/static/index/css/utils.css
@@ -2,6 +2,11 @@ body{
 	padding-bottom: 60px;
 }
 
+i.iconfont{
+	vertical-align: middle;
+	margin-top: -2px;
+}
+
 a:hover{
 	text-decoration: none;
 }
@@ -72,4 +77,184 @@ ol, ul{
 
 #navbar li a{
 	color: #fff;
+}
+
+
+/* 搜索框 */
+
+.code-wrap{
+	margin-top: 12%;
+}
+.code-search{
+	width: 55%;
+	min-width: 500px;
+	height: 60px;
+	line-height: 60px;
+	margin: 0 auto;
+	background: #1E9FFF;
+	border-radius: 60px;
+	border: 3px solid #1E9FFF;
+	overflow: hidden;
+	position: relative;
+}
+
+.code-search .dropdown{
+	position: relative;
+	width: 100%;
+	height: 54px;
+	line-height: 54px;
+}
+
+.code-search .dropdown-selected{
+	width: 82%!important;
+	height:54px;
+	line-height:54px;
+	color:#333;
+	text-indent: 10px;
+	display: block;
+	background: #fff;
+	border-radius: 54px 10px 10px 54px;
+	border: none;
+	padding: 0 20px;
+	margin: 0;
+	font-size: 16px;
+	color: #333;
+}
+
+.code-search .dropdown-selected,
+.code-search .dropdown-selected:focus{
+	outline: none;
+	outline-offset: 0;
+	border: none !important;
+	box-shadow: none !important;
+}
+
+.code-search .dropdown-selected::-webkit-input-placeholder{
+	color: #999;
+}
+
+.search-btn{
+	width: 46px;
+	height: 46px;
+	position: absolute;
+	top: 50%;
+	transform: translate(0, -50%);
+	right: calc(9% - 23px);
+	
+	color: #fff;
+	font-weight: bold;
+	text-align: center;
+	line-height: 46px;
+}
+
+.search-btn i{
+	font-size: 28px;
+}
+
+
+.dropdown ul{
+	padding:0;
+	width:100%;
+	max-height:200px;
+	overflow-y:auto ;
+	background-color:#fff;
+	margin-top:2px;
+	border:1px solid #c6c8cc;
+	position:absolute;
+	display:none;z-index: 2;
+}
+.dropdown ul li{
+	list-style: none;
+	text-indent:10px;
+}
+.dropdown ul li a{
+	display:block;
+	color:#282c33;
+	text-decoration:none;
+	overflow: hidden;
+	text-overflow:ellipsis;
+	white-space: nowrap;
+}
+.dropdown ul li:hover{
+	background-color:#f2f6fa;
+}
+.dropdown ul li a:active,.dropdown ul li.active a{
+	background-color: #e4e9f2;
+}
+
+/* 搜索框 END */
+
+
+#tagsList {
+	position:relative; 
+	width:450px; 
+	height:450px; 
+	margin: 0 auto;  
+}
+#tagsList a {
+	position:absolute; 
+	top:0px; left:0px; 
+	font-family: Microsoft YaHei; 
+	color:#666;
+	font-weight:bold; 
+	text-decoration:none; 
+	padding: 3px 6px; 
+}
+#tagsList a:hover { 
+	color:#FF0000; 
+	letter-spacing:2px;
+}
+
+
+.series-item{
+	height: 140px;
+	background: #ccc;
+	border-radius: 10px;
+}
+
+.series-wrap{
+	margin-top: 10%;
+}
+
+.series-item{
+	margin-bottom: 40px;
+	box-shadow: 0 26px 40px -24px #00685d
+}
+
+
+
+/* code for animated blinking cursor */
+.typed-cursor{
+	opacity: 1;
+	font-weight: 100;
+	-webkit-animation: blink 0.7s infinite;
+	-moz-animation: blink 0.7s infinite;
+	-ms-animation: blink 0.7s infinite;
+	-o-animation: blink 0.7s infinite;
+	animation: blink 0.7s infinite;
+}
+@-keyframes blink{
+	0% { opacity:1; }
+	50% { opacity:0; }
+	100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+	0% { opacity:1; }
+	50% { opacity:0; }
+	100% { opacity:1; }
+}
+@-moz-keyframes blink{
+	0% { opacity:1; }
+	50% { opacity:0; }
+	100% { opacity:1; }
+}
+@-ms-keyframes blink{
+	0% { opacity:1; }
+	50% { opacity:0; }
+	100% { opacity:1; }
+}
+@-o-keyframes blink{
+	0% { opacity:1; }
+	50% { opacity:0; }
+	100% { opacity:1; }
 }
