--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,6 +1,6 @@
 {layout name="layout/index_layout" /}
 
-<main id="content" class="container">
+<main id="content">
 	<section class="content-top"></section>
 	<section class="content-lists">
 		{volist name="result['article']" id='vo'}
