--- a/application/admin/view/inputItem.html
+++ b/application/admin/view/inputItem.html
@@ -314,7 +314,7 @@ layui.use(['laydate'], function() {
             //dialogMaskBgColor : "#000", // 设置透明遮罩层的背景颜色，全局通用，默认为#fff
             imageUpload: true,
             imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-            imageUploadURL: "/Center/RichTextUpload",
+            imageUploadURL: "http://jia.blog.com/attachment/ueditor/run.html?action=markdown",
             onload: function () {
                 //console.log('onload', this);
                 //this.fullscreen();
