--- a/public/static/index/css/utils.css
+++ b/public/static/index/css/utils.css
@@ -11,17 +11,22 @@ a:hover{
 	text-decoration: none;
 }
 #header{
-	width: 60px;
+	width: 160px;
 	height: 100vh;
-	background: #000;
+	background: #009688;
+	border-right: 1px solid #393D49;
 	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: 10001;
-	box-shadow: 2px 0 6px rgba(100, 100, 100, .5);
+	/*box-shadow: 2px 0 6px rgba(100, 100, 100, .5);*/
 }
 
-.container{}
+#content{
+	margin-left: 160px;
+	padding: 0 80px;
+	width: calc(100% - 160px);
+}
 
 .content-item{
 	
@@ -51,6 +56,7 @@ a:hover{
 	height: 30px;
 	background: #f6f6f6;
 	width: 100%;
+	padding-left: 160px;
 	position: fixed;
 	left: 0;
 	bottom: 0;
@@ -257,4 +263,12 @@ ol, ul{
 	0% { opacity:1; }
 	50% { opacity:0; }
 	100% { opacity:1; }
+}
+
+.detail-title{
+	font-size: 26px;
+	color: #333;
+	font-weight: 500;
+	margin: 100px 0 60px;
+	line-height: 40px;
 }
