--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -6,7 +6,7 @@
 		{volist name="result['article']" id='vo'}
 		<div class="content-item">
 			<h3 class="index-item-title"><a href="{:url('/detail', ['id' => $vo['id']])}">{$vo['title']}</a></h3>
-			<div class="index-content">{$vo['article_aata']['content']|raw}</div>
+			<div class="index-content">{$vo['article_data']['content']|raw}</div>
 
 			<div class="index-item-footer text-right">
 				<a href="{:url('/detail', ['id' => $vo['id']])}">阅读全文</a>&emsp;{:date('m月d日, Y', $vo['inputtime'])} 
