--- a/public/templates/default/cms/show.html
+++ b/public/templates/default/cms/show.html
@@ -9,8 +9,8 @@
 				{$content|raw}
 			</div>
 		</div>
-		<div class="col-sm-3">
+		<!-- <div class="col-sm-3">
 			<div style="background: #888; height:500px;"></div>
-		</div>
+		</div> -->
 	</section>
 </main>
