--- a/public/templates/default/cms/category_coder.html
+++ b/public/templates/default/cms/category_coder.html
@@ -3,8 +3,7 @@
 <div class="code-wrap" id="content">
 	<div class="code-search">
 		<div id="search">
-			<input type="text"
-			class="dropdown-selected" placeholder="请输入关键字">
+			<input type="text" class="dropdown-selected" placeholder="请输入关键字">
 		</div>
 		<div class="search-btn"><i class="iconfont icon-search"></i></div>
 	</div>
