--- a/public/templates/default/cms/list_sedries.html
+++ b/public/templates/default/cms/list_sedries.html
@@ -3,7 +3,7 @@
 <main id="content">
 	<ul>
 		{volist name="result" id="vo"}
-		<li><a href="{:url('/series_list', ['id'=>$vo['id']])}">{$vo['title']}</a></li>
+		<li><a href="{:url('/series_detail/'.$vo['id'])}">{$vo['title']}</a></li>
 		{/volist}
 	</ul>
 </main>
