--- a/public/templates/default/cms/show_series.html
+++ b/public/templates/default/cms/show_series.html
@@ -1,6 +1,7 @@
 {layout name="layout/index_layout" /}
 
 <main id="content">
+	<section class="content-top"></section>
 	<section class="row">
 		<div class="col-sm-9">
 			<div>
