--- a/public/static/index/css/utils.css
+++ b/public/static/index/css/utils.css
@@ -64,6 +64,13 @@ a:hover{
 	border-top: 1px solid #e6e6e6;
 }
 
+#footer .type-wrap{
+	line-height: 30px;
+	padding-left: 10px;
+	color: #666;
+	font-size: 13px;
+}
+
 ol, ul{
 	list-style-type: none;
 	padding: 0;
@@ -212,21 +219,50 @@ ol, ul{
 }
 
 
-.series-item{
-	height: 140px;
-	background: #ccc;
-	border-radius: 10px;
-}
 
 .series-wrap{
 	margin-top: 10%;
 }
 
+
 .series-item{
+	display: flex;
+	border-radius: 10px;
+	width: 100%;
+	height: 140px;
+	justify-content: center;
+	align-items: center;
+	font-size: 18px;
+	line-height: 34px;
+	color: #fff;
+	letter-spacing: 2px;
 	margin-bottom: 40px;
-	box-shadow: 0 26px 40px -24px #00685d
+	
 }
 
+.sedries-list{
+	padding: 30px;
+}
+
+.sedries-item{
+	font-size: 28px;
+	color: #333;
+	line-break: 70px;
+	margin-bottom: 10px;
+}
+
+.sedries-item i.iconfont{
+	font-size: 20px;
+	color: #ccc;
+	text-shadow: 1px 1px 10px rgba(200,200,200,.2);
+	display: inline-block;
+	margin-right: 10px;
+}
+
+.sedries-item a{
+	color: #666;
+	text-shadow: 1px 1px 10px rgba(0,0,0,.2)
+}
 
 
 /* code for animated blinking cursor */
