--- a/public/static/index/css/utils.css
+++ b/public/static/index/css/utils.css
@@ -29,28 +29,36 @@ a:hover{
 }
 
 .content-item{
-	
+	padding-top: 20px;
+	padding-bottom: 40px;
+
 }
 .index-item-title{
 	padding: 10px 0;
 	margin-bottom: 20px;
+	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.548)
 }
 .index-item-title a{
-	font-size: 32px;
+	font-size: 28px;
 	font-weight: 500;
 	letter-spacing: 2px;
 	color: #444;
 }
 
+.index-content{
+	padding-bottom: 20px;
+}
+
 .index-item-footer{
 	font-size: 16px;
 	margin-top: 20px;
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3)
 }
 
 .content-top{
 	height: 260px;
 	margin-bottom: 16px;
-	border-bottom: 1px solid #ccc;
+	/* border-bottom: 1px solid #ccc; */
 }
 #footer{
 	height: 30px;
